# mbopenapi/openapi_server/models/unified_metrics_jobs_info_details.py
@@ -1,0 +1,290 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class UnifiedMetricsJobsInfoDetails(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, start_time=None, submit_time=None, finish_time=None, job_name=None, user_name=None, node_list=None, total_nodes=None, cpu_cores=None, job_array=None):  # noqa: E501
+        """UnifiedMetricsJobsInfoDetails - a model defined in OpenAPI
+
+        :param start_time: The start_time of this UnifiedMetricsJobsInfoDetails.  # noqa: E501
+        :type start_time: float
+        :param submit_time: The submit_time of this UnifiedMetricsJobsInfoDetails.  # noqa: E501
+        :type submit_time: float
+        :param finish_time: The finish_time of this UnifiedMetricsJobsInfoDetails.  # noqa: E501
+        :type finish_time: float
+        :param job_name: The job_name of this UnifiedMetricsJobsInfoDetails.  # noqa: E501
+        :type job_name: str
+        :param user_name: The user_name of this UnifiedMetricsJobsInfoDetails.  # noqa: E501
+        :type user_name: str
+        :param node_list: The node_list of this UnifiedMetricsJobsInfoDetails.  # noqa: E501
+        :type node_list: List[str]
+        :param total_nodes: The total_nodes of this UnifiedMetricsJobsInfoDetails.  # noqa: E501
+        :type total_nodes: float
+        :param cpu_cores: The cpu_cores of this UnifiedMetricsJobsInfoDetails.  # noqa: E501
+        :type cpu_cores: float
+        :param job_array: The job_array of this UnifiedMetricsJobsInfoDetails.  # noqa: E501
+        :type job_array: bool
+        """
+        self.openapi_types = {
+            'start_time': float,
+            'submit_time': float,
+            'finish_time': float,
+            'job_name': str,
+            'user_name': str,
+            'node_list': List[str],
+            'total_nodes': float,
+            'cpu_cores': float,
+            'job_array': bool
+        }
+
+        self.attribute_map = {
+            'start_time': 'start_time',
+            'submit_time': 'submit_time',
+            'finish_time': 'finish_time',
+            'job_name': 'job_name',
+            'user_name': 'user_name',
+            'node_list': 'node_list',
+            'total_nodes': 'total_nodes',
+            'cpu_cores': 'cpu_cores',
+            'job_array': 'job_array'
+        }
+
+        self._start_time = start_time
+        self._submit_time = submit_time
+        self._finish_time = finish_time
+        self._job_name = job_name
+        self._user_name = user_name
+        self._node_list = node_list
+        self._total_nodes = total_nodes
+        self._cpu_cores = cpu_cores
+        self._job_array = job_array
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'UnifiedMetricsJobsInfoDetails':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The UnifiedMetrics_jobs_info_details of this UnifiedMetricsJobsInfoDetails.  # noqa: E501
+        :rtype: UnifiedMetricsJobsInfoDetails
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def start_time(self):
+        """Gets the start_time of this UnifiedMetricsJobsInfoDetails.
+
+
+        :return: The start_time of this UnifiedMetricsJobsInfoDetails.
+        :rtype: float
+        """
+        return self._start_time
+
+    @start_time.setter
+    def start_time(self, start_time):
+        """Sets the start_time of this UnifiedMetricsJobsInfoDetails.
+
+
+        :param start_time: The start_time of this UnifiedMetricsJobsInfoDetails.
+        :type start_time: float
+        """
+        if start_time is None:
+            raise ValueError("Invalid value for `start_time`, must not be `None`")  # noqa: E501
+
+        self._start_time = start_time
+
+    @property
+    def submit_time(self):
+        """Gets the submit_time of this UnifiedMetricsJobsInfoDetails.
+
+
+        :return: The submit_time of this UnifiedMetricsJobsInfoDetails.
+        :rtype: float
+        """
+        return self._submit_time
+
+    @submit_time.setter
+    def submit_time(self, submit_time):
+        """Sets the submit_time of this UnifiedMetricsJobsInfoDetails.
+
+
+        :param submit_time: The submit_time of this UnifiedMetricsJobsInfoDetails.
+        :type submit_time: float
+        """
+        if submit_time is None:
+            raise ValueError("Invalid value for `submit_time`, must not be `None`")  # noqa: E501
+
+        self._submit_time = submit_time
+
+    @property
+    def finish_time(self):
+        """Gets the finish_time of this UnifiedMetricsJobsInfoDetails.
+
+
+        :return: The finish_time of this UnifiedMetricsJobsInfoDetails.
+        :rtype: float
+        """
+        return self._finish_time
+
+    @finish_time.setter
+    def finish_time(self, finish_time):
+        """Sets the finish_time of this UnifiedMetricsJobsInfoDetails.
+
+
+        :param finish_time: The finish_time of this UnifiedMetricsJobsInfoDetails.
+        :type finish_time: float
+        """
+        if finish_time is None:
+            raise ValueError("Invalid value for `finish_time`, must not be `None`")  # noqa: E501
+
+        self._finish_time = finish_time
+
+    @property
+    def job_name(self):
+        """Gets the job_name of this UnifiedMetricsJobsInfoDetails.
+
+
+        :return: The job_name of this UnifiedMetricsJobsInfoDetails.
+        :rtype: str
+        """
+        return self._job_name
+
+    @job_name.setter
+    def job_name(self, job_name):
+        """Sets the job_name of this UnifiedMetricsJobsInfoDetails.
+
+
+        :param job_name: The job_name of this UnifiedMetricsJobsInfoDetails.
+        :type job_name: str
+        """
+        if job_name is None:
+            raise ValueError("Invalid value for `job_name`, must not be `None`")  # noqa: E501
+
+        self._job_name = job_name
+
+    @property
+    def user_name(self):
+        """Gets the user_name of this UnifiedMetricsJobsInfoDetails.
+
+
+        :return: The user_name of this UnifiedMetricsJobsInfoDetails.
+        :rtype: str
+        """
+        return self._user_name
+
+    @user_name.setter
+    def user_name(self, user_name):
+        """Sets the user_name of this UnifiedMetricsJobsInfoDetails.
+
+
+        :param user_name: The user_name of this UnifiedMetricsJobsInfoDetails.
+        :type user_name: str
+        """
+        if user_name is None:
+            raise ValueError("Invalid value for `user_name`, must not be `None`")  # noqa: E501
+
+        self._user_name = user_name
+
+    @property
+    def node_list(self):
+        """Gets the node_list of this UnifiedMetricsJobsInfoDetails.
+
+
+        :return: The node_list of this UnifiedMetricsJobsInfoDetails.
+        :rtype: List[str]
+        """
+        return self._node_list
+
+    @node_list.setter
+    def node_list(self, node_list):
+        """Sets the node_list of this UnifiedMetricsJobsInfoDetails.
+
+
+        :param node_list: The node_list of this UnifiedMetricsJobsInfoDetails.
+        :type node_list: List[str]
+        """
+        if node_list is None:
+            raise ValueError("Invalid value for `node_list`, must not be `None`")  # noqa: E501
+
+        self._node_list = node_list
+
+    @property
+    def total_nodes(self):
+        """Gets the total_nodes of this UnifiedMetricsJobsInfoDetails.
+
+
+        :return: The total_nodes of this UnifiedMetricsJobsInfoDetails.
+        :rtype: float
+        """
+        return self._total_nodes
+
+    @total_nodes.setter
+    def total_nodes(self, total_nodes):
+        """Sets the total_nodes of this UnifiedMetricsJobsInfoDetails.
+
+
+        :param total_nodes: The total_nodes of this UnifiedMetricsJobsInfoDetails.
+        :type total_nodes: float
+        """
+        if total_nodes is None:
+            raise ValueError("Invalid value for `total_nodes`, must not be `None`")  # noqa: E501
+
+        self._total_nodes = total_nodes
+
+    @property
+    def cpu_cores(self):
+        """Gets the cpu_cores of this UnifiedMetricsJobsInfoDetails.
+
+
+        :return: The cpu_cores of this UnifiedMetricsJobsInfoDetails.
+        :rtype: float
+        """
+        return self._cpu_cores
+
+    @cpu_cores.setter
+    def cpu_cores(self, cpu_cores):
+        """Sets the cpu_cores of this UnifiedMetricsJobsInfoDetails.
+
+
+        :param cpu_cores: The cpu_cores of this UnifiedMetricsJobsInfoDetails.
+        :type cpu_cores: float
+        """
+        if cpu_cores is None:
+            raise ValueError("Invalid value for `cpu_cores`, must not be `None`")  # noqa: E501
+
+        self._cpu_cores = cpu_cores
+
+    @property
+    def job_array(self):
+        """Gets the job_array of this UnifiedMetricsJobsInfoDetails.
+
+
+        :return: The job_array of this UnifiedMetricsJobsInfoDetails.
+        :rtype: bool
+        """
+        return self._job_array
+
+    @job_array.setter
+    def job_array(self, job_array):
+        """Sets the job_array of this UnifiedMetricsJobsInfoDetails.
+
+
+        :param job_array: The job_array of this UnifiedMetricsJobsInfoDetails.
+        :type job_array: bool
+        """
+        if job_array is None:
+            raise ValueError("Invalid value for `job_array`, must not be `None`")  # noqa: E501
+
+        self._job_array = job_array
