# openapi.yaml
@@ -39,6 +39,7 @@ components:
                 - power_usage
                 - fan_speed
                 - cpu_inl_temp
+                - job_id
               properties:
                 memory_usage:
                   type: array
@@ -64,6 +65,10 @@ components:
                     type: array
                     items:
                       type: number
+                job_id:
+                  type: array
+                  items:
+                    type: string
         jobs_info:
           type: object
           required:
@@ -75,25 +80,35 @@ components:
             details:
               type: object
               required:
-                - user_name
-                - submit_time
                 - start_time
+                - submit_time
                 - finish_time
-                - array_job
+                - job_name
+                - user_name
+                - node_list
+                - total_nodes
+                - cpu_cores
+                - job_array
               properties:
+                start_time:
+                  type: number
+                submit_time:
+                  type: number
+                finish_time:
+                  type: number
+                job_name:
+                  type: string
                 user_name:
                   type: string
-                submit_time:
-                  type: integer
-                start_time: {}
-                  # oneOf: 
-                  #   - type: integer
-                  #   - type: object
-                finish_time: {}
-                  # oneOf:
-                  #   - type: integer
-                  #   - type: object
-                array_job:
+                node_list:
+                  type: array
+                  items:
+                    type: string
+                total_nodes:
+                  type: number
+                cpu_cores:
+                  type: number
+                job_array:
                   type: boolean
         time_stamp: 
           type: array
@@ -116,6 +131,10 @@ paths:
         Get **unified metrics** based on speficied start time, end time, time interval and value type. The **start** and **end** time should follow date-time Notation as defined by [RFC 3339, section 5.6](https://tools.ietf.org/html/rfc3339#section-5.6), e.g. `2020-02-12T14:00:00Z`; the time **interval** should follow **duration literals**, which specify a length of time; the **value** type should only be `min`, `max`, `mean`, or `median`.
         
         A duration literal is an integer literal followed immediately (with no spaces) by a duration unit, the units include `s`(second), `m`(minute), `h`(hour), `d`(day), `w`(week).
+
+        Use compress to specify returned data is compressed or not. If query large range of time with small interval, it would reduce significant transfering time using compressed data. For Json data compression and de-compression, please refer to [this](https://medium.com/@busybus/zipjson-3ed15f8ea85d).
+
+        One thing to be noticed, due to we switched database on April 28, 2020 11:40:00 AM GMT-05:00 DST, currently we do not support requesting data with time range falls on this time point.
       operationId: get_unified_metric
       parameters:
       - in: query
@@ -124,7 +143,7 @@ paths:
         schema:
           type: string
           format: date-time
-          example: '2020-02-14T12:00:00Z'
+          example: '2020-02-14T12:00:00Z-05:00'
         description: start time of time range of the monitoring metrics
       - in: query
         name: end
@@ -132,7 +151,7 @@ paths:
         schema:
           type: string
           format: date-time
-          example: '2020-02-14T18:00:00Z'
+          example: '2020-02-14T18:00:00Z-05:00'
         description: end time of time range of the monitoring metrics
       - in: query
         name: interval
